Make eclipse happier